--- a/war/WEB-INF/web.xml
+++ b/war/WEB-INF/web.xml
@@ -11,9 +11,19 @@
     <servlet-class>buskingserver.Gae2AndroidServlet</servlet-class>
   </servlet>
   
+  <servlet>
+    <servlet-name>Api</servlet-name>
+    <servlet-class>buskingserver.ApiServlet</servlet-class>
+  </servlet>
+  
   <servlet-mapping>
     <servlet-name>Buskingserver</servlet-name>
     <url-pattern>/buskingserver</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>Api</servlet-name>
+    <url-pattern>/api</url-pattern>
   </servlet-mapping>
   
   <welcome-file-list>
